re PR c++/57437 (C++11: mutable lambdas)

PR c++/57437
	* typeck.c (check_return_expr): Lambda proxies aren't eligible
	for nrv or return by move.

From-SVN: r200832